现在豹猫潜行冲刺舒服了

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -80,41 +80,6 @@
     "item.minecraft.lingering_potion.effect.feed_potion": "Оседающее зелье сжатой энергии",
     "item.minecraft.tipped_arrow.effect.feed_potion": "Стрела сжатой энергии",
     "effect.shape-shifter-curse.feed_effect": "Сжатая энергия, способная утолить ваш голод.",
-    "item.minecraft.potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.splash_potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.lingering_potion.effect.to_alpha_0_potion": "ALPHA",
-    "item.minecraft.tipped_arrow.effect.to_alpha_0_potion": "ALPHA",
-    "effect.shape-shifter-curse.to_alpha_0_potion": "empty custom alpha form",
-    "item.minecraft.potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.splash_potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.lingering_potion.effect.to_beta_0_potion": "BETA",
-    "item.minecraft.tipped_arrow.effect.to_beta_0_potion": "BETA",
-    "effect.shape-shifter-curse.to_beta_0_potion": "empty custom beta form",
-    "item.minecraft.potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.splash_potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.lingering_potion.effect.to_gamma_0_potion": "GAMMA",
-    "item.minecraft.tipped_arrow.effect.to_gamma_0_potion": "GAMMA",
-    "effect.shape-shifter-curse.to_gamma_0_potion": "empty custom gamma form",
-    "item.minecraft.potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.splash_potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.lingering_potion.effect.to_omega_sp_potion": "OMEGA",
-    "item.minecraft.tipped_arrow.effect.to_omega_sp_potion": "OMEGA",
-    "effect.shape-shifter-curse.to_omega_sp_potion": "empty custom omega special form",
-    "item.minecraft.potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.splash_potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.lingering_potion.effect.to_psi_sp_potion": "PSI",
-    "item.minecraft.tipped_arrow.effect.to_psi_sp_potion": "PSI",
-    "effect.shape-shifter-curse.to_psi_sp_potion": "empty custom psi special form",
-    "item.minecraft.potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.splash_potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.lingering_potion.effect.to_chi_sp_potion": "CHI",
-    "item.minecraft.tipped_arrow.effect.to_chi_sp_potion": "CHI",
-    "effect.shape-shifter-curse.to_chi_sp_potion": "empty custom chi special form",
-    "item.minecraft.potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.splash_potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.lingering_potion.effect.to_phi_sp_potion": "PHI",
-    "item.minecraft.tipped_arrow.effect.to_phi_sp_potion": "PHI",
-    "effect.shape-shifter-curse.to_phi_sp_potion": "empty custom phi special form",
     "item.shape-shifter-curse.cursed_book_of_shape_shifter": "Странная книга",
     "item.shape-shifter-curse.book_of_shape_shifter": "Книга Оборотня",
     "item.shape-shifter-curse.book_of_shape_shifter.tooltip": "\"Секреты этой книги могут раскрыть только Оборотни\".",
@@ -386,5 +351,8 @@
     "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetY": "Instinct Bar Position Y Offset",
     "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosType": "FamiliarFox ManaBar Middle Position Type",
     "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetX": "FamiliarFox ManaBar Position X Offset",
-    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetY": "FamiliarFox ManaBar Position Y Offset"
+    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetY": "FamiliarFox ManaBar Position Y Offset",
+    "key.shape-shifter-curse.toggle_clip_at_ledge": "Toggle Clip At Ledge",
+    "message.shape-shifter-curse.clip_at_ledge.on": "Clip At Ledge: On",
+    "message.shape-shifter-curse.clip_at_ledge.off": "Clip At Ledge: Off"
 }
