将数据包魔力条改为狐狸魔力条 配置翻译"使魔赤狐魔力条xxx" -> "魔力条xxx" 新增LangMissingCheck脚本 在Tools目录下运行(使用相对目录) 可以检查Lang缺失 补充俄语RichLang条目缺失(用英语填的 防止使用脚本生成lang导致奇怪的问题)

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -397,9 +397,9 @@
     "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosType": "Instinct Bar Middle Position Type",
     "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetX": "Instinct Bar Position X Offset",
     "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetY": "Instinct Bar Position Y Offset",
-    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosType": "FamiliarFox ManaBar Middle Position Type",
-    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetX": "FamiliarFox ManaBar Position X Offset",
-    "text.autoconfig.shape-shifter-curse-client.option.familiarFoxManaBarPosOffsetY": "FamiliarFox ManaBar Position Y Offset",
+    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosType": "ManaBar Middle Position Type",
+    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosOffsetX": "ManaBar Position X Offset",
+    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosOffsetY": "ManaBar Position Y Offset",
     "text.autoconfig.shape-shifter-curse-common.title": "Shape Shifter Curse - Common Config",
     "text.autoconfig.shape-shifter-curse-common.category.General": "General",
     "text.autoconfig.shape-shifter-curse-common.option.transformativeBatSpawnChance": "Transformative Bat Spawn Success Rate",
