小错误修复

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -140,7 +140,7 @@
     "item.shape-shifter-curse.diamond_mining_claw": "Diamond Mining Claw",
     "item.shape-shifter-curse.diamond_mining_claw.tooltip": "[Bat Form Tool] Requires strong foreclaws. Mining efficiency and damage + , you can use wall clinging power when held",
     "item.shape-shifter-curse.fountain_belt": "Fountain Belt",
-    "item.shape-shifter-curse.fountain_belt.tooltip": "[Axolotl Form Tool] Requires powerful water power. Water burst stop dealing damage, it launches you and nearby entities",
+    "item.shape-shifter-curse.fountain_belt.tooltip": "[Axolotl Form] Requires powerful water power. Water burst stop dealing damage, it launches you and nearby entities",
     "item.shape-shifter-curse.resonant_core": "Resonant Core",
     "item.shape-shifter-curse.resonant_core.tooltip": "[Allay Form] Consuming Amethyst Shards grants regeneration to nearby entities, but no longer restores saturation",
     "item.shape-shifter-curse.fire_charm_paper": "Fire Charm Paper",
