Added translation for UI

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -380,10 +380,10 @@
     "tooltip.shape_shifter_curse.potion_target_form": "Форма: ",
     "itemGroup.shape_shifter_curse.sscitems": "Shape Shifter Curse",
     "category.shape-shifter-curse": "Shape Shifter Curse",
-    "key.shape-shifter-curse.make_sound": "Make Sound",
-    "key.shape-shifter-curse.toggle_clip_at_ledge": "Toggle Clip At Ledge",
-    "message.shape-shifter-curse.clip_at_ledge.on": "Clip At Ledge: On",
-    "message.shape-shifter-curse.clip_at_ledge.off": "Clip At Ledge: Off",
+    "key.shape-shifter-curse.make_sound": "Издать звук",
+    "key.shape-shifter-curse.toggle_clip_at_ledge": "Переключить режим приседа",
+    "message.shape-shifter-curse.clip_at_ledge.on": "Классический режим",
+    "message.shape-shifter-curse.clip_at_ledge.off": "Без застревания на краю блока",
     "item.shape-shifter-curse.custom_trinket": "Custom Trinket",
     "text.shape-shifter-curse.config.title": "Shape Shifter Curse - Меню настроек",
     "text.shape-shifter-curse.config.close": "Отмена",
@@ -393,13 +393,13 @@
     "text.autoconfig.shape-shifter-curse-client.option.ignoreNoRenderArmPower": "Игнорировать настройку \"Не отображать руку\"",
     "text.autoconfig.shape-shifter-curse-client.category.InDevelopment": "В разработке",
     "text.autoconfig.shape-shifter-curse-client.option.newStartBookForBiggerScreen": "Сделать интерфейс новой версии стартовой книги больше",
-    "text.autoconfig.shape-shifter-curse-client.category.UI": "UI",
-    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosType": "Instinct Bar Middle Position Type",
-    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetX": "Instinct Bar Position X Offset",
-    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetY": "Instinct Bar Position Y Offset",
-    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosType": "ManaBar Middle Position Type",
-    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosOffsetX": "ManaBar Position X Offset",
-    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosOffsetY": "ManaBar Position Y Offset",
+    "text.autoconfig.shape-shifter-curse-client.category.UI": "Польз. интерф.",
+    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosType": "Тип расположения индикатора инстинктов",
+    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetX": "Смещение индикатора инстинктов по X",
+    "text.autoconfig.shape-shifter-curse-client.option.instinctBarPosOffsetY": "Смещение индикатора инстинктов по Y",
+    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosType": "Тип расположения индикатора магии",
+    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosOffsetX": "Смещение индикатора магии по X",
+    "text.autoconfig.shape-shifter-curse-client.option.manaBarPosOffsetY": "Смещение индикатора магии по Y",
     "text.autoconfig.shape-shifter-curse-common.title": "Shape Shifter Curse - Общие настройки",
     "text.autoconfig.shape-shifter-curse-common.category.General": "Общие",
     "text.autoconfig.shape-shifter-curse-common.option.transformativeBatSpawnChance": "Вероятность появления проклятой летучей мыши",
@@ -421,6 +421,6 @@
     "text.autoconfig.shape-shifter-curse-custom.option.primaryGreyReverse": "Реверсировать основной цвет в чёрно-белый",
     "text.autoconfig.shape-shifter-curse-custom.option.accent1GreyReverse": "Реверсировать дополнительный цвет 1 в чёрно-белый",
     "text.autoconfig.shape-shifter-curse-custom.option.accent2GreyReverse": "Реверсировать дополнительный цвет 2 в чёрно-белый",
-    "text.autoconfig.shape-shifter-curse-custom.option.enable_form_random_sound": "Enable Form Random Sound",
-    "text.autoconfig.shape-shifter-curse-custom.option.auto_sync_config": "Auto Sync Config"
+    "text.autoconfig.shape-shifter-curse-custom.option.enable_form_random_sound": "Включить случайные звуки формы",
+    "text.autoconfig.shape-shifter-curse-custom.option.auto_sync_config": "Автосинхронизация конфигурации"
 }
